syntax = "proto3";

package spqr;

option go_package = "spqr/proto";

enum RouterStatus {
  CLOSED = 0;
  OPENED = 1;
}


message Router {
  string id = 1;
  string adress = 2;
  RouterStatus status = 3;
}

service RouterService {
  rpc ListRouter (ListRouterRequest) returns (ListRouterReply) {}
  rpc AddRouter (AddRouterRequest) returns (AddRouterReply) {}
}


message ListRouterRequest {}

message ListRouterReply {
	repeated Router routers = 1;
}

message AddRouterRequest {
  string id = 1;
  string addr = 2;
}

message AddRouterReply {
  string id = 1;
}

